--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --secondary-color: #757575;
   --footer-color: #2f303a;
   --button-color: #f5f4fa;
+  --contact-form-input-border: rgba(33, 33, 33, 0.2);
   --transition-duration-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -411,6 +412,7 @@ li {
 
 .hero-button {
   border-radius: 4px;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.8;
   letter-spacing: 0.06em;
@@ -607,6 +609,73 @@ li {
     box-shadow var(--transition-duration-function);
 }
 
+.email-form {
+  font-family: var(--main-font-family);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  display: block;
+  width: 358px;
+  height: 50px;
+  background-color: var(--footer-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding-left: 16px;
+  padding-right: 16px;
+  color: rgba(255, 255, 255, 0.6);
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.email-form:hover {
+  border-color: var(--current-color);
+  outline: none;
+}
+
+.btn-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+  letter-spacing: 0.06em;
+  width: 200px;
+  height: 50px;
+  background-color: var(--current-color);
+  color: var(--main-light-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  transition: var(--transition-duration-function);
+}
+
+.btn-footer:hover,
+.btn-footer:focus {
+  background-color: var(--secondary-color-button);
+  transition: var(--transition-duration-function);
+}
+
+.icon-footer {
+  margin-left: 10px;
+  fill: var(--main-light-color);
+}
+
+.footer-third-box {
+  margin-left: 93px;
+}
+
+.modal-footer {
+  display: flex;
+  gap: 12px;
+}
+
 .foto-work {
   line-height: 1.1;
   color: var(--secondary-color);
@@ -794,6 +863,7 @@ li {
   transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
+  padding: 40px;
   background-color: var(--main-light-color);
 }
 
@@ -811,4 +881,169 @@ li {
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  fill: var(--current-color);
+}
+
+.form-title {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+  color: var(--main-color);
+}
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.label-form {
+  display: block;
+  text-align: left;
+  margin-bottom: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--secondary-color);
+}
+.inputs {
+  position: relative;
+  display: block;
+  margin-top: 4px;
+}
+.input {
+  display: block;
+  cursor: pointer;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:focus {
+  outline: none;
+  border-color: var(--current-color);
+}
+
+.input:focus + .icon-form {
+  fill: var(--current-color);
+}
+
+.modal-link {
+  color: var(--current-color);
+  margin-left: 3px;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-link:focus {
+  text-decoration: underline;
+  border-color: var(--current-color);
+}
+.icon-form {
+  display: block;
+  position: absolute;
+  top: 11px;
+  left: 12px;
+}
+.textarea {
+  display: block;
+  cursor: pointer;
+  width: 100%;
+  height: 120px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  transition: border-color var(--transition-duration-function);
+}
+
+.textarea:focus {
+  outline: none;
+  border-color: var(--current-color);
+}
+.icon-checked {
+  cursor: pointer;
+  width: 16px;
+  height: 15px;
+  margin-right: 8px;
+  border: 2px solid var(--main-color);
+  border-radius: 2px;
+  fill: var(--main-light-color);
+}
+
+.icon-checked-icon {
+  display: none;
+  fill: var(--main-light-color);
+}
+
+.modal-form-check {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+}
+.modal-form-check:checked + .icon-checked {
+  background-color: var(--current-color);
+  border-color: var(--current-color);
+}
+
+.modal-form-check:focus + .icon-checked,
+.modal-form-check:hover + .icon-checked {
+  outline: 1px solid var(--button-background);
+}
+
+.btn-modal {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--main-light-color);
+  background: var(--current-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  width: 200px;
+  padding: 10px 52px;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  cursor: pointer;
+  transition: background-color var(--transition-duration-function);
+}
+
+.btn-modal:hover,
+.btn-modal:focus {
+  background-color: var(--secondary-color-button);
 }
