--- a/css/styles.css
+++ b/css/styles.css
@@ -997,12 +997,26 @@ li {
 }
 
 .modal-form-check {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ appearance: none;
+ position: absolute;
+ transition: var(--transition-duration-function);
 }
+
+.modal-form-check:checked + .icon-checked {
+  background-color: var(--current-color);
+  border-color: var(--current-color);
+}
+
+.modal-form-check:checked + .icon-checked .icon-checked-icon {
+ display: block;
+}
+
+
+.modal-form-check:focus + .icon-checked {
+  /* outline: 1px solid var(--button-background); */
+  box-shadow: 0 0 0 1px rgba(33, 150, 243, 0.9);
+}
+
 .checkbox-label {
   display: flex;
   align-items: center;
@@ -1014,15 +1028,6 @@ li {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-}
-.modal-form-check:checked + .icon-checked {
-  background-color: var(--current-color);
-  border-color: var(--current-color);
-}
-
-.modal-form-check:focus + .icon-checked,
-.modal-form-check:hover + .icon-checked {
-  outline: 1px solid var(--button-background);
 }
 
 .btn-modal {
