--- a/css/styles.css
+++ b/css/styles.css
@@ -928,9 +928,8 @@ li {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
-  transition-property: border-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color var(--transition-duration-function);
+  transition: fill var(--transition-duration-function);
 }
 
 .input:focus {
@@ -945,21 +944,21 @@ li {
 .modal-link {
   color: var(--current-color);
   margin-left: 3px;
-  transition-property: border-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color var(--transition-duration-function);
 }
 
 .modal-link:focus {
   text-decoration: underline;
   border-color: var(--current-color);
 }
+
 .icon-form {
   display: block;
   position: absolute;
   top: 11px;
   left: 12px;
 }
+
 .textarea {
   display: block;
   cursor: pointer;
@@ -969,7 +968,6 @@ li {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 12px 16px;
-  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
@@ -997,9 +995,9 @@ li {
 }
 
 .modal-form-check {
- appearance: none;
- position: absolute;
- transition: var(--transition-duration-function);
+  appearance: none;
+  position: absolute;
+  transition: var(--transition-duration-function);
 }
 
 .modal-form-check:checked + .icon-checked {
@@ -1008,9 +1006,8 @@ li {
 }
 
 .modal-form-check:checked + .icon-checked .icon-checked-icon {
- display: block;
+  display: block;
 }
-
 
 .modal-form-check:focus + .icon-checked {
   /* outline: 1px solid var(--button-background); */
@@ -1031,7 +1028,6 @@ li {
 }
 
 .btn-modal {
-  font-family: 'Roboto', sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
