--- a/css/styles.css
+++ b/css/styles.css
@@ -634,6 +634,7 @@ li {
 .email-form:hover {
   border-color: var(--current-color);
   outline: none;
+  color: var(--main-light-color);
 }
 
 .btn-footer {
@@ -641,6 +642,7 @@ li {
   justify-content: center;
   align-items: center;
   text-align: center;
+  border: none;
   cursor: pointer;
   letter-spacing: 0.06em;
   width: 200px;
@@ -863,7 +865,6 @@ li {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 528px;
-  height: 581px;
   padding: 40px;
   background-color: var(--main-light-color);
 }
@@ -899,27 +900,33 @@ li {
   margin-bottom: 12px;
   color: var(--main-color);
 }
+
 .form-group {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
 }
+
 .label-form {
   display: block;
   text-align: left;
   margin-bottom: 10px;
-  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: var(--secondary-color);
 }
+
+.label-form:last-child {
+  margin-bottom: 20px;
+}
+
 .inputs {
   position: relative;
   display: block;
   margin-top: 4px;
 }
+
 .input {
   display: block;
   cursor: pointer;
@@ -928,7 +935,7 @@ li {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
-  transition: fill var(--transition-duration-function);
+  transition: border var(--transition-duration-function);
 }
 
 .input:focus {
@@ -1016,14 +1023,13 @@ li {
 .checkbox-label {
   display: flex;
   align-items: center;
+  justify-content: center;
   cursor: pointer;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 30px;
   font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
+  color: var(--secondary-color);
 }
 
 .btn-modal {
